# sleeping_dog

./: CMakeLists.txt  README.md
Modules/: common.cmake
examples/: CMakeLists.txt  example.cpp  puppy.cpp
lib/: .ff-map  .file-map.el  CMakeLists.txt
lib/include/: http_session.hpp  listener.hpp  router_data.hpp  router_impl.hpp  server_impl.hpp
lib/include/auth/: oauth_impl.hpp  oauth_impl_data.hpp
lib/sb/: sleeping_dog.hpp
lib/sb/sleeping_dog/: authenticator.hpp  make_response.hpp  router.hpp  server.hpp  sleeping_dog.hpp  types.hpp
lib/sb/sleeping_dog/auth/: base.hpp  oauth.hpp
lib/src/: http_session.cpp  listener.cpp  make_response.cpp  router.cpp  router_impl.cpp  server.cpp  server_impl.cpp
lib/src/auth/: base.cpp  oauth.cpp  oauth_impl.cpp
